[gd_scene load_steps=6 format=3 uid="uid://cnekgfju57wp5"]

[ext_resource type="Script" uid="uid://chci27ndcntys" path="res://ball stuff/ball.gd" id="1_41u45"]
[ext_resource type="Texture2D" uid="uid://2us0y1eemms0" path="res://ball stuff/Cue_Ball_Temp.png" id="1_x8fbi"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_41u45"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_41u45"]
radius = 9.0

[sub_resource type="Curve" id="Curve_41u45"]
_data = [Vector2(0, 1), 0.0, -0.150142, 0, 0, Vector2(1, 0), -3.43593, 0.0, 0, 0]
point_count = 2

[node name="RigidBody2D" type="RigidBody2D" groups=["Ball"]]
z_index = -1
z_as_relative = false
collision_mask = 7
physics_material_override = SubResource("PhysicsMaterial_41u45")
gravity_scale = 0.3
continuous_cd = 2
script = ExtResource("1_41u45")
collect_color = Color(0.662184, 1, 0.633765, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_41u45")

[node name="BallProxy" type="Node2D" parent="."]

[node name="CueBallTemp" type="Sprite2D" parent="BallProxy"]
scale = Vector2(0.02, 0.02)
texture = ExtResource("1_x8fbi")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.9
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 200.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
orbit_velocity_min = -1.0
orbit_velocity_max = 1.0
scale_amount_min = 3.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_41u45")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_particles_2d_finished"]
